--- a/src/l3/CommandLine/Flow.Hosts.Common/appsettings.json
+++ b/src/l3/CommandLine/Flow.Hosts.Common/appsettings.json
@@ -3,8 +3,8 @@
     "ConnectionString": "",
     "CultureCode": "ru-RU",
     "Editor": {
-      "JSON": "code",
-      "CSV": "C:\\Program Files\\Microsoft Office\\root\\Office16\\EXCEL.EXE"
+      "json": "code",
+      "csv": "C:\\Program Files\\Microsoft Office\\root\\Office16\\EXCEL.EXE"
     } 
   } 
 }
