--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,7 +51,7 @@ jobs:
       run: dotnet build --no-restore
       working-directory: ./src/plugins/transactions/Flow.Plugins.Transactions.TKF
 
-      name: "[Transactions reader plugin] restore"
+    - name: "[Transactions reader plugin] restore"
       run: dotnet restore --configFile Nuget.config
       working-directory: ./src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader
     - name: "[Transactions reader plugin] build"
