--- a/src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader/Nuget.Config
+++ b/src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader/Nuget.Config
@@ -2,6 +2,6 @@
 <configuration>
 	<packageSources>
 		<add key="flow plugin deps" value="../../../../build/plugin-deps" />
-		<add key="nuget" value="https://api.nuget.org/" />
+		<add key="nuget" value="https://api.nuget.org/v3/index.json" />
 	</packageSources>
 </configuration>
