--- a/src/l3/CommandLine/Flow.Hosts.Transactions.Import.Cli/Flow.Hosts.Transactions.Import.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Transactions.Import.Cli/Flow.Hosts.Transactions.Import.Cli.csproj
@@ -17,6 +17,7 @@
       <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Plugins.Loader\Flow.Infrastructure.Plugins.Loader.csproj" />
       <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Rates.CBRF\Flow.Infrastructure.Rates.CBRF.csproj" />
       <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Storage\Flow.Infrastructure.Storage.csproj" />
+      <ProjectReference Include="..\..\..\l2\IO\Flow.Infrastructure.IO.Import\Flow.Infrastructure.IO.Import.csproj" />
       <ProjectReference Include="..\..\..\l2\IO\Flow.Infrastructure.IO\Flow.Infrastructure.IO.csproj" />
       <ProjectReference Include="..\Flow.Hosts.Common\Flow.Hosts.Common.csproj" />
     </ItemGroup>
