--- a/src/l2/IO/Flow.Infrastructure.IO.Import/Flow.Infrastructure.IO.Import.csproj
+++ b/src/l2/IO/Flow.Infrastructure.IO.Import/Flow.Infrastructure.IO.Import.csproj
@@ -4,6 +4,9 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Authors>nvsnkv</Authors>
+        <Copyright>© 2023 nvsnkv </Copyright>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
