--- a/src/l3/CommandLine/Flow.Hosts.EntryPoint.Cli/Flow.Hosts.EntryPoint.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.EntryPoint.Cli/Flow.Hosts.EntryPoint.Cli.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>flow</AssemblyName>
-    <Version>5.0.0</Version>
+    <Version>5.1.0</Version>
     <AssemblyVersion>5.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
@@ -27,6 +27,7 @@
     <ProjectReference Include="..\Flow.Hosts.ExchangeRates.Cli\Flow.Hosts.ExchangeRates.Cli.csproj">
       <Private>True</Private>
     </ProjectReference>
+    <ProjectReference Include="..\Flow.Hosts.Transactions.Import.Cli\Flow.Hosts.Transactions.Import.Cli.csproj" />
     <ProjectReference Include="..\Flow.Hosts.Transactions.Cli\Flow.Hosts.Transactions.Cli.csproj">
       <Private>True</Private>
     </ProjectReference>
